--- a/.github/workflows/pull_as_aggregator.yml
+++ b/.github/workflows/pull_as_aggregator.yml
@@ -179,10 +179,8 @@ jobs:
               var delete_list = []             
               var summary_comment = 'Terraform Summary:'
               for (let comment of comments) {
-                console.log(process.env.NONCE_WORD);
-                console.log("found: " + comment.body);
                 if (comment.body.startsWith(process.env.NONCE_WORD)) {
-                  summary_comment += "\n" + comment.body.replace(NONCE_WORD, '') + "\n";
+                  summary_comment += "\n" + comment.body.replace(process.env.NONCE_WORD, '') + "\n";
                   delete_list.push(comment.id);
                 }
               };
