--- a/.github/workflows/pull_as_aggregator.yml
+++ b/.github/workflows/pull_as_aggregator.yml
@@ -126,20 +126,16 @@ jobs:
           script: |
             try {
               const fs = require('fs') 
-              var blah = fs.readFileSync("/tmp/terraform.results");
-              fs.readFile("/tmp/terraform.results", (err, data) => {
-                if (err) throw err;
-                // Create a summary comment
-                var comment = process.env.NONCE_WORD + "\n"
-                comment += "/tmp/blah/boom/${{ matrix.customer_root}}\n" 
-                comment += data                
-                github.issues.createComment({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  issue_number: process.env.ISSUE_NUMBER,
-                  body: comment
-                })
-              });
+              var data = fs.readFileSync("/tmp/terraform.results");
+              var comment = process.env.NONCE_WORD + "\n"
+              comment += "/tmp/blah/boom/${{ matrix.customer_root}}\n" 
+              comment += data                
+              github.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: process.env.ISSUE_NUMBER,
+                body: comment
+              })
             }
             catch (err) {
               core.setFailed(`Request failed with error ${err}`)
