--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -354,7 +354,7 @@ jobs:
       - name: "Process terraform outputs"
         #if: steps.find_affected_workspaces.outputs.storage
         env:
-          VALIDATE: "${{ steps.tf_validate_storage.outputs.stdout }}"
+          VALIDATE: join(["${{ steps.tf_validate_storage.outputs.stdout }}","${{ steps.tf_validate_storage.outputs.stderr }}"], '')
           PLAN: "${{ steps.tf_plan_storage.outputs.stdout }}"
           APPLY: "${{ steps.tf_apply_storage.outputs.stdout }}"
         continue-on-error: true 
