--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -261,6 +261,8 @@ jobs:
       # Checkout the code
       - name: Checkout repository branch
         uses: actions/checkout@v2
+        with:
+          ref: env.branch
 
       # Downloads and installs Terraform binaries, using the terraform_version specified
       - name: Install and configure Terraform
