--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -356,9 +356,9 @@ jobs:
       - name: "Process terraform outputs"
         #if: steps.find_affected_workspaces.outputs.storage
         env:
-          VALIDATE: ${{ join([steps.tf_validate_storage.outputs.stdout, steps.tf_validate_storage.outputs.stderr], '') }}
-          PLAN: ${{ join([steps.tf_plan_storage.outputs.stdout, steps.tf_plan_storage.outputs.stderr], '') }}
-          APPLY: ${{ join([steps.tf_apply_storage.outputs.stdout, steps.tf_apply_storage.outputs.stderr], '') }}
+          VALIDATE: ${{ steps.tf_validate_storage.outputs.stdout }} ${{ steps.tf_validate_storage.outputs.stderr }}
+          PLAN: ${{ steps.tf_plan_storage.outputs.stdout }} ${{ steps.tf_plan_storage.outputs.stderr }}
+          APPLY: ${{ steps.tf_apply_storage.outputs.stdout, }} ${{ steps.tf_apply_storage.outputs.stderr }}
         continue-on-error: true 
         uses: actions/github-script@v3
         with: 
