--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -366,7 +366,7 @@ jobs:
           script: |
             var fs = require('fs');
             const regex = /(No Change|(Plan:|Apply:) (\d to add, \d to change, \d to destroy)?)/g;
-            var output = process.env.VALIDATE + process.env.PLAN + process.env.APPLY
+            var output = '' + process.env.VALIDATE + process.env.PLAN + process.env.APPLY
             if (output.length > 0) {
               let match = regex.exec(output);
               var add = (match !== null) ? match[1] : "Failure"
@@ -379,12 +379,12 @@ jobs:
                 if (err) throw err;
               });
             }
-            var validate = process.env.VALIDATE
+            var validate = '' + process.env.VALIDATE
             if (validate.length > 0) {
-              const output = `#### Customer Workspace: \`${{ matrix.customer_root }}/storage\`
-              #### Terraform Validation: \`${process.env.VALIDATE}\`
-              #### Terraform Plan: \`${{ steps.tf_plan_storage.outcome }}\`
-              #### Terraform Apply: \`${{ steps.tf_apply_storage.outcome }}\`
+              const output = `### Customer Workspace: \`${{ matrix.customer_root }}/storage\`
+              Terraform Validation: ${process.env.VALIDATE}
+              Terraform Plan: \`${{ steps.tf_plan_storage.outcome }}\`
+              Terraform Apply: \`${{ steps.tf_apply_storage.outcome }}\`
 
               <details><summary>Show Plan</summary>
 
